I gave my content maximum width to prevent it from stretching on large screens

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,6 +2,8 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
   background-color: #000000;
   padding: 60px;
 }
@@ -10,6 +12,7 @@ a{
     color: #fff;
     transition: color 0.8s ease;
 }
+
 a:hover {
     color: #fff;
     text-decoration: underline;
